# PokeAdventure

./: .gitignore  BaseSupa.sql  Dockerfile  MainBot.py  Mainbackup.py  bd_locations_dump.json  pokeapi_locations_dump.json  pyproject.toml  reconciliation_report.xlsx  requirements.txt
backup_cogs/: Mainbackup.py
cogs/: adventure_cog.py  battle_cog.py  black_shop_cog.py  evolution_cog.py  move_relearner_cog.py  player_cog.py  player_cog_backup.py  pokeapi_service.py  profile_cog.py  shop_cog.py  team_cog.py
dump_results/: reconciliation_report.xlsx
dumps/: 3-update_reconcile_locations.py  4-apply_generated_updates_supabase.py  dump_bd_locations.py  generated_updates.sql  reconcile_locations_to_excel.py  sync_pokeapi_locations_dump.py
dumps_scripts/: apply_generated_updates_supabase.py  update_reconcile_locations.py
dumps_scripts/dump_results/: generated_updates.sql
utils/: battle_utils.py  event_utils.py  evolution_utils.py  image_generator.py  inventory_utils.py  list_routes.py  pokeapi_service.py  static_pokemon_utils.py  wild_utils.py
