[project]

name = "pokeadventure"
version = "0.1.0"
description = "Projeto Bot discord de Pokemon"
authors = [
    {name = "Guilherme",email = "guilhermelucario36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.0)",
    "aiosignal (==1.4.0)",
    "alembic (==1.17.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "attrs (==25.4.0)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.2)",
    "cryptography (==46.0.2)",
    "cycler (==0.12.1)",
    "deprecation (==2.1.0)",
    "discord-py (==2.6.4)",
    "distro (==1.9.0)",
    "fonttools (==4.58.4)",
    "frozenlist (==1.8.0)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "h2 (==4.3.0)",
    "hpack (==4.1.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "hyperframe (==6.1.0)",
    "idna (==3.11)",
    "jiter (==0.11.0)",
    "kiwisolver (==1.4.8)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.3)",
    "multidict (==6.7.0)",
    "numpy (==2.3.0)",
    "openai (==2.3.0)",
    "packaging (==25.0)",
    "pillow (==11.2.1)",
    "postgrest (==2.22.0)",
    "propcache (==0.4.1)",
    "pycparser (==2.23)",
    "pydantic (==2.12.1)",
    "pydantic-core (==2.41.3)",
    "pyjwt (==2.10.1)",
    "pyparsing (==3.2.3)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "random2 (==1.0.2)",
    "realtime (==2.22.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.44)",
    "storage3 (==2.22.0)",
    "strenum (==0.4.15)",
    "supabase (==2.22.0)",
    "supabase-auth (==2.22.0)",
    "supabase-functions (==2.22.0)",
    "tqdm (==4.67.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "websockets (==15.0.1)",
    "yarl (==1.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
